css/styles.css
/* ... */
.fa-check:hover {
    color: rgb(0, 190, 0);
}

.cta-continue {
    display: block;
    border: rgba(255, 255, 255, 0.355) solid 2px;
    padding: 20px 30px;
    width: fit-content;
    margin: 0 auto;
}

.cta-continue:hover {
    background-color: #B22DC9;
    border: #B22DC9 solid 2px;
}

/* ------------------ Footer ------------------- */

footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 20px 10%;
    bottom: 0;
}

.horizontal-spacer {
    width: 100%;
    max-width: 200px;
}

.container-copyright {
    display: flex;
    align-items: end;
    width: 100%;
    max-width: 200px;
    text-align: center;
}

.container-copyright p {
    margin: 0 auto;
    font-weight: 100;
}

.container-connect-with-us {
    width: 100%;
    max-width: 200px;
    text-align: center;
}

.container-connect-with-us p {
    margin: 0 0 5% 0;
}

.container-connect-with-us ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 0 auto;
    padding: 0;
    list-style: none;
    font-size: 30px;
}

.container-connect-with-us-1 {
    width: 100%;
    max-width: 200px;
    text-align: center;
}

.container-connect-with-us-1 p {
    margin: 0 0 5% 0;
}

.container-connect-with-us-1 ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 0 auto;
    padding: 0;
    list-style: none;
    font-size: 30px;
}

i:hover {
    color: #B22DC9;
}

.extended-footer {
    display: flex;
    flex-direction: column;
    background-color: rgb(3, 0, 3, 0.5);
    margin: 0;
}

.row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 10px 5%;
}

.row-center-1 {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 10%;
    margin: 0 5%;
    border-top: solid rgba(255, 255, 255, 0.429) 1px;
    border-bottom: solid rgba(255, 255, 255, 0.429) 1px;
}

.row-center-2 {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 10%;
    margin: 10px 5%;
}

.footer-list ul {
    list-style: none;
    margin: 0;
    padding: 0;
    text-align: center;
}

.footer-list li {
    margin: 10px 0;
}

.footer-list a:hover {
    color: #B22DC9;
}

.bigger-font {
    font-size: 1.25rem;
    color: #B22DC9;
}

.go-to-top {
    font-size: 30px;
}

/* --------------- Breakpoints ------------------ */

@media only screen and (max-width: 992px) {

    main {
        margin: 80px 5% 0 5%;
    }

    footer {
        display: flex;
        flex-direction: column-reverse;
        justify-content: center;
        margin: 0 10%;
    }

    .horizontal-spacer {
        display: none;
    }

    .container-copyright {
        margin: 0 auto;
    }

    .home-logo h1 {
        font-size: 15vw;
    }

    .hide {
        display: none;
    }

    .store-s1-desktop {
        display: none;
    }

    .store-s1-mobile {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .store-s2-mobile {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        overflow: auto;
        gap: 20px;
        padding-bottom: 20px;
    }

    .store-s2-mobile .winter-sale-elements img {
        width: 100%;
        width: 300px;
        height: 350px;
    }

    .hamburger-icon {
        margin-left: 10%;
    }

    #shopping-cart-icon {
        margin-right: 10%;
    }

    .container-connect-with-us {
        margin: 10px auto;
    }

    .container-copyright {
        margin-bottom: 10px;
    }
    
}

@media only screen and (max-width: 768px) {

    nav a {
        display: block;
        position: relative;
        background-color: #0b0b0be7;
        font-size: 1rem;
        top: 80px;
        left: -80px;
        padding: 50px 200px 50px 10px;
        border-bottom: solid #b22dc98d 1px;
        border-left: solid #b22dc98d 1px;
        border-right: solid #b22dc98d 1px;
    }

    .hamburger-icon {
        margin-left: 5%;
    }

    #shopping-cart-icon {
        margin-right: 5%;
    }

    .search-field,
    .search-button {
        display: none;
    }

    #magnifying-glass-icon {
        display: block;
        font-size: 1.5rem;
        margin: auto 20px auto 0;
    }

    .fa-magnifying-glass:hover {
        color: white;
    }

    .two-col-row {
        flex-direction: column;
    }

    .col-2 {
        margin: 0 0 20px 0;
        padding: 0;
    }

    .product-page-row {
        flex-direction: column;
    }

    .product-page-row-1 {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .top-row {
        flex-direction: column;
    }

    .add-to-cart-sticky {
        margin: 0 0 20px 0;
        width: auto;
        max-width: none;
    }

    .grid {
        display: flex;
        flex-direction: column;
        height: 650px;
        margin-bottom: 20px;
    }

    #hide {
        display: none;
    }

}

@media only screen and (max-width: 600px) {

    nav a {
        left: -65px;
    }

    .bg {
        padding: 10%;
    }

    .row {
        margin: 10px 5%;
    }

    .row-center-1 {
        flex-direction: column;
        margin: 0 5%;
    }

    .row-center-2 {
        flex-direction: column;
        margin: 10px 5%;
    }

    .product-row {
        flex-direction: column;
        gap: 20px;
    }

    .product-row img,
    .product-row ul,
    .product-row p {
        text-align: center;
        margin: 0 auto;
    }

    .product-row p {
        margin: 0;
    }
}

@media only screen and (max-width: 320px) {
   .bg {
    padding: 8%;
   }
}

